--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "validation_js",
+  "name": "validataur",
   "version": "1.0.0",
   "description": "A super cool validation library!",
   "main": "src/index.js",
@@ -10,12 +10,10 @@
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "lint": "eslint . --fix"
   },
   "repository": {
@@ -32,5 +30,8 @@
   "bugs": {
     "url": "https://github.com/EstherOA/symmetrical-rotary-phone/issues"
   },
-  "homepage": "https://github.com/EstherOA/symmetrical-rotary-phone#readme"
+  "homepage": "https://github.com/EstherOA/symmetrical-rotary-phone#readme",
+  "dependencies": {
+    "mocha": "^9.2.2"
+  }
 }
